--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -10,7 +10,7 @@ API Course, Lesson 1 -->
  </head>
  <body>
    <!-- TODO 1: Create a place to put the map in the HTML-->
-   <div></div>
+   <div id="map"></div>
    <script>
      // TODO: Create a map variable
 
@@ -18,10 +18,18 @@ API Course, Lesson 1 -->
      function initMap() {
        // TODO: use a constructor to create a new map JS object. You can use the coordinates
        // we used, 40.7413549, -73.99802439999996 or your own!
+       var kp_location = {lat:40.7413549, lng:-73.99802439999996};
+       var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: kp_location
+        });
+        var marker = new google.maps.Marker({
+          position: kp_location,
+          map: map
+        });
      }
    </script>
-   <!--TODO: Load the JS API ASYNCHRONOUSLY below.-->
-   <script>
-   </script>
+   <!--TODO: Load the JS API ASYNCHRONOUSLY below. AIzaSyB-Lyk060GazXWwfTBQCi1-BIfdRl-YnNs-->
+   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-Lyk060GazXWwfTBQCi1-BIfdRl-YnNs&callback=initMap" type="text/javascript"></script>
  </body>
 </html>
