Added Info window

--- a/04_Hello_Map_Quiz.html
+++ b/04_Hello_Map_Quiz.html
@@ -25,7 +25,14 @@ API Course, Lesson 1 -->
         });
         var marker = new google.maps.Marker({
           position: kp_location,
-          map: map
+          map: map,
+          title: "Kapil's Marker!"
+        });
+        var infowindow = new google.maps.InfoWindow({
+          content:"I am a info window"
+        });
+        marker.addListener('click',function(){
+          infowindow.open(map,marker);
         });
      }
    </script>
